--- a/Bio.html
+++ b/Bio.html
@@ -25,37 +25,33 @@
     
 </div>
 
-<footer>
+<div class="foot">
+    <h2 class="item1" id="media-item1">Aalborg Biograf.</h2>
+    <p class="item2" id="media-item2">
+        Biografen <br>
+        Haveje 33-35 - 1840 Avedøre
+    </p>
 
-    <div class="foot">
-        <h2 class="item1">Aalborg Biograf.</h2>
-        <p class="item2">
-            Biografen <br>
-            Haveje 33-35 - 1840 Avedøre
-        </p>
+    <p class="item3" id="media-item3">
+        Forestillinger:<br>
+        Senior Bio: Man.- Tor.:	14.00 - 16.00<br><br>
 
-        <p class="item3">
-            Forestillinger:<br>
-            Senior Bio: Man.- Tor.:	14.00 - 16.00<br><br>
+        Første Forestilling:	16.15 - 18.00<br>
+        Anden Forestilling:	18.30 - 2 1.00<br>
+        Anden Forestilling:	21.15 - 22.00<br><br>
 
-            Første Forestilling:	16.15 - 18.00<br>
-            Anden Forestilling:	18.30 - 2 1.00<br>
-            Anden Forestilling:	21.15 - 22.00<br><br>
+        Fred. lørd. Midnat:	22.30 - 02.00
+    </p>
 
-            Fred. lørd. Midnat:	22.30 - 02.00
-        </p>
+    <p class="item4" id="media-item4">
+        55 33 23 16 - Billettelefonen er åben 30 min før dagens første forestilling. <br><br>
 
-        <p class="item4">
-            55 33 23 16 - Billettelefonen er åben 30 min før dagens første forestilling. <br><br>
+        E-mail: Biografen@mail.dk<br><br>
 
-            E-mail: Biografen@mail.dk<br><br>
+        Køb billetter online via: www.kino.dk
 
-            Køb billetter online via: www.kino.dk
-
-        </p>
-    </div>
-
-</footer>
+    </p>
+</div>
 
 </body>
 </html>
