--- a/Bio.html
+++ b/Bio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Om Biografen</title>
-    <link rel="stylesheet" href="/css/bio.css">
+    <link rel="stylesheet" href="css/bio.css">
 </head>
 <body>
     
